--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context="com.projectsling.fitconduit.AboutActivity">
+    tools:context=".ui.AboutActivity">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/aboutToolBar"
