--- a/app/src/main/res/layout/fragment_wire_choice.xml
+++ b/app/src/main/res/layout/fragment_wire_choice.xml
@@ -5,14 +5,9 @@
              android:layout_height="wrap_content"
              tools:context="com.projectsling.fitconduit.ui.WireChoiceFragment">
 
-    <!--<ListView
+    <ListView
         android:id="@+id/wireList"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />-->
-
-    <TextView
-        android:text="Choice"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="match_parent" />
 
 </FrameLayout>
