--- a/app/src/main/res/layout/fragment_wire_choice.xml
+++ b/app/src/main/res/layout/fragment_wire_choice.xml
@@ -1,9 +1,15 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:id="@+id/choiceContainer"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
+             android:orientation="vertical"
              tools:context="com.projectsling.fitconduit.ui.WireChoiceFragment">
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/wires"/>
 
     <ListView
         android:id="@+id/wireList"
@@ -13,6 +19,7 @@
     <Button
         android:id="@+id/addWireButton"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:text="@string/wireAdd"/>
 
-</FrameLayout>
+</LinearLayout>
