--- a/app/src/main/res/layout/fragment_wire_choice.xml
+++ b/app/src/main/res/layout/fragment_wire_choice.xml
@@ -1,7 +1,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:id="@+id/choiceContainer"
-             android:layout_width="wrap_content"
+             android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              tools:context="com.projectsling.fitconduit.ui.WireChoiceFragment">
@@ -14,7 +14,7 @@
     <ListView
         android:id="@+id/wireList"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="wrap_content" />
 
     <Button
         android:id="@+id/addWireButton"
