--- a/app/src/main/res/layout/row_wire_adapter.xml
+++ b/app/src/main/res/layout/row_wire_adapter.xml
@@ -6,17 +6,21 @@
 
     <TextView
         android:id="@+id/rowWireNumber"
-        android:layout_width="70dp"
-        android:layout_height="20dp"/>
+        android:layout_width="100dp"
+        android:layout_height="40dp"
+        android:textSize="20sp"
+        android:gravity="center_vertical"/>
 
     <TextView
         android:id='@+id/rowWireName'
         android:layout_width="200dp"
-        android:layout_height="20dp"
-        android:layout_weight="1"/>
+        android:layout_height="30dp"
+        android:layout_weight="1"
+        android:gravity="center_vertical"/>
 
     <TextView
         android:id="@+id/rowWireAmount"
         android:layout_width="90dp"
-        android:layout_height="20dp"/>
+        android:layout_height="30dp"
+        android:gravity="center_vertical"/>
 </LinearLayout>
