--- a/app/src/main/res/layout/fragment_wire_choice.xml
+++ b/app/src/main/res/layout/fragment_wire_choice.xml
@@ -22,4 +22,21 @@
         android:layout_height="wrap_content"
         android:text="@string/wireAdd"/>
 
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/conduitSpinnerLabel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/selectConduit"/>
+
+        <Spinner
+            android:id="@+id/conduitSpinner"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
+
 </LinearLayout>
