--- a/app/src/main/res/layout/dialog_wire_creator.xml
+++ b/app/src/main/res/layout/dialog_wire_creator.xml
@@ -13,6 +13,10 @@
     <NumberPicker
         android:id="@+id/dialogPicker"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"/>
 
 </LinearLayout>
