--- a/app/src/main/res/layout/dialog_unknown_wire.xml
+++ b/app/src/main/res/layout/dialog_unknown_wire.xml
@@ -1,14 +1,19 @@
-<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:id="@+id/dialogLayoutRoot"
+              android:id="@+id/unknownDialogLayoutRoot"
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
 
-    <Spinner
-        android:id="@+id/dialogSpinner"
+    <EditText
+        android:id="@+id/unknownDialogEditText"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:inputType="numberDecimal"
+        android:hint="@string/hintEnterOd"/>
 
     <FrameLayout
         android:layout_width="wrap_content"
@@ -19,9 +24,10 @@
         android:paddingRight="10dp">
 
         <NumberPicker
-            android:id="@+id/dialogPicker"
+            android:id="@+id/unknownDialogPicker"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"/>
 
     </FrameLayout>
 </LinearLayout>
